[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "beanie_batteries_queue"
version = "0.2.0"
description = "Simple queue system for Beanie"
readme = "README.md"
requires-python = ">=3.7,<4.0"
license = { file="LICENSE" }
authors = [
    {name = "Roman Right", email = "roman-right@protonmail.com"}
]
keywords = ["mongodb", "odm", "orm", "pydantic", "mongo", "async", "python", "beanie", "queue", "beanie-batteries-queue"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "beanie==1.20.0b1",
]

[project.optional-dependencies]
test = [
    "pre-commit>=2.3.0",
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=2.8.1",
    "dnspython>=2.1.0",
    "flake8>=3",
    "pyright>=0",
]

[project.urls]
homepage = "https://github.com/roman-right/beanie_batteries_queue"
repository = "https://github.com/roman-right/beanie_batteries_queue"

# TOOLS

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report term-missing --cov=beanie_batteries_queue --cov-branch --cov-fail-under=85"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toml"
ignore_missing_imports = true

[tool.pyright]
include = ["tests/typing", "beanie_batteries_queue"]

[tool.ruff]
line-length = 79

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["E711"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10